# Nyxen

./: .gitignore  Cargo.toml  FIXES.md  FIXES_SUMMARY.md  README.md  SETUP.md  build.rs  build.sh  install.sh  nyx-daemon.sh  nyxen-uninstall  run_as_daemon.sh  sysinfo.txt  system_info.txt  top_processes.txt  uninstall.sh  yeezy-daemon.sh
src/: agent.rs  bridge.rs  config.rs  daemon.rs  db.rs  lib.rs  main.rs  orb_state.rs
src/tools/: browser.rs  files.rs  mod.rs  packages.rs  shell.rs  sysinfo.rs
src/ui/: main_window.rs  mod.rs  orb_widget.rs  settings.rs  tray.rs
src/voice/: listener.rs  mod.rs  speaker.rs
