[package]
name = "yeezy"
version = "0.1.0"
edition = "2021"
description = "Yeezy — Linux AI assistant (Groq-powered)"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
epaint = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
global-hotkey = "0.6"
tray-icon = "0.19"
image = "0.25"
hound = "3.5"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rfd = "0.15"
regex = "1"
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1"
png = "0.17"
cpal = "0.15"

# Tray menus on Linux use GTK before egui's winit path initializes it.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", default-features = false }
